--- a/roles/ss/tasks/main.yml
+++ b/roles/ss/tasks/main.yml
@@ -31,12 +31,6 @@
   stat:
     path: '{{ installation_path }}'
   register: ss_stat
- 
-- name: Copy hosts file
-  template:
-    src: hosts.file.j2
-    dest: /etc/hosts
-  when: not ss_stat.stat.exists
 
 - name: Extract Spectrum Installer
   unarchive:
@@ -58,6 +52,16 @@
   template:
     src: distinst.pass.j2
     dest: /distinst.pass
+  when: not ss_stat.stat.exists
+
+- name: Copy hosts file
+  copy:
+    src: /etc/hosts
+    dest: /etc/hosts
+    force: yes
+    owner: root
+    group: root
+    mode: 0644
   when: not ss_stat.stat.exists
 
 - name: Install SpectroSERVER
