--- a/roles/dr/tasks/main.yml
+++ b/roles/dr/tasks/main.yml
@@ -82,11 +82,6 @@
 - include: '{{ ansible_os_family }}_{{ ansible_distribution_major_version }}_VerticaPackages.yml'
   when: not verticad_stat.stat.exists
 
-- name: Copy hosts file
-  template:
-    src: hosts.file.j2
-    dest: /etc/hosts
-
 - name: Copy installer response file
   template:
     src: installer.response.j2
@@ -98,6 +93,16 @@
     src: drinstall.properties.j2
     dest: /drinstall.properties
   when: not verticad_stat.stat.exists and inventory_hostname == groups['dr'][0]
+
+- name: Copy hosts file
+  copy:
+    src: /etc/hosts
+    dest: /etc/hosts
+    force: yes
+    owner: root
+    group: root
+    mode: 0644
+  when: not verticad_stat.stat.exists
 
 - name: Copy DR installer
   copy:
